--- a/project-tds-virtual-ta-promptfoo.yaml
+++ b/project-tds-virtual-ta-promptfoo.yaml
@@ -3,10 +3,11 @@ description: "TDS Virtual TA Project Sample (but not the actual evaluation) Ques
 providers:
   - id: https
     config:
-      url: http://127.0.0.1:8000/api/ # Replace this with your API endpoint
+      url: https://virtual-ta-ecru.vercel.app/api # Replace this with your API endpoint
       method: POST
       headers:
         Content-Type: application/json
+        Authorization: Bearer {{ API_KEY }}
       body: |
         {
           "question": "{{ question }}"{% if image %},
